---
source: crates/mokoto/tests/parser.rs
expression: output
---
{x : Nat = y}

---
OBJECT_PAT@0..13
  L_BRACE@0..1 "{"
  PATTERN_FIELD_PAT@1..12
    IDENT@1..2 "x"
    SPACE@2..3 " "
    TYPE_ANNOTATION@3..9
      COLON@3..4 ":"
      SPACE@4..5 " "
      PATH_TYPE@5..9
        PATH@5..9
          IDENT@5..8 "Nat"
          SPACE@8..9 " "
    EQUALS@9..10 "="
    SPACE@10..11 " "
    VAR_PAT@11..12
      IDENT@11..12 "y"
  R_BRACE@12..13 "}"
